adding font aweome to the project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Demo One</title>
     <link rel="styleSheet" href="css/main.css" />
     <link rel="styleSheet" href="css/normailze.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
