--- a/index.html
+++ b/index.html
@@ -14,5 +14,24 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="container">
+        <img src="image/logo.png" alt="logo" class="logo" />
+        <div class="links">
+          <span class="icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+          <ul>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
